tutorial/level_2/M1_cicd/3_openshift_gitops_argocd/manifests/sample-app/service.yaml
# Sample application Service
apiVersion: v1
kind: Service
metadata:
  name: gitops-sample-app
  labels:
    app: gitops-sample-app
    tutorial-level: "2"
    tutorial-module: "M1"
spec:
  selector:
    app: gitops-sample-app
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
